<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     tools:context="in.sayes.android.khadyam.activity.SignUpActivity"
    
    android:background="@drawable/bg"
    >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  
    
    android:orientation="vertical"
     
    >
    <include
        android:id="@+id/header_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/top_header" />
    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/padding_large"
        android:background="@drawable/blackline"
        android:layout_below="@+id/header_login"/>

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="@dimen/icon_size_larg"
        android:layout_height="@dimen/icon_size_larg"
        android:layout_marginLeft="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_large"
         android:visibility="gone"
         android:background="@drawable/ic_launcher"/>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
   
   >

    <EditText
        android:id="@+id/edt_signup_email"
        android:layout_width="@dimen/textBox_width"
        android:layout_height="@dimen/textBox_hight"
        android:layout_margin="@dimen/padding_samll"
        android:textColor="@color/text_color"
        android:ems="10"
        android:hint="@string/lbl_email"
        android:textColorHint="@color/text_color_light"
        android:background="@drawable/rounded_button_holo_dark"
        android:inputType="textEmailAddress" 
         android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/padding_samll">

        
    </EditText>

    <EditText
        android:id="@+id/edt_signup_phone"
        android:layout_width="@dimen/textBox_width"
        android:layout_height="@dimen/textBox_hight"
        android:layout_margin="@dimen/padding_samll"
        android:textColorHint="@color/text_color_light"
        android:ems="10"
        android:hint="@string/hint_phone_no"
        android:textColor="@color/text_color"
        android:inputType="phone" 
        android:background="@drawable/rounded_button_holo_dark"
         android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/padding_samll">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edt_signup_name"
        android:layout_width="@dimen/textBox_width"
        android:layout_height="@dimen/textBox_hight"
        android:layout_margin="@dimen/padding_samll"
        android:textColor="@color/text_color"
        android:ems="10"
        android:textColorHint="@color/text_color_light"
         android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/padding_samll"
        android:hint="@string/hint_name"
        android:background="@drawable/rounded_button_holo_dark"
        android:inputType="textPersonName" 
         
        />

   

    <Button
        android:id="@+id/btn_signup_send"
        android:layout_width="@dimen/btn_larg"
        android:layout_height="@dimen/btn_hight"
       
        android:layout_marginTop="@dimen/padding_large"
        android:background="@drawable/rounderd_button_old" 
        android:text="@string/sign_up"
        />

    <Button
        android:id="@+id/btn_signup_login"
        android:layout_width="@dimen/btn_larg"
        android:layout_height="@dimen/btn_hight"
        
        android:background="@drawable/rounderd_button_old" 
        android:text="@string/login"
        android:layout_marginTop="@dimen/padding_veryLarge"
        />

</LinearLayout>
    
    
</LinearLayout>

</ScrollView>